--- a/mongodb.yml
+++ b/mongodb.yml
@@ -15,6 +15,10 @@ spec:
       labels:
         app: mongodb
     spec:
+      volumes: 
+      - name: pv-storage-mongo
+        persistentVolumeClaim:
+          claimName: pv-claim-mongo
       containers:
       - name: mongodb
         image: mongo:4.2.12-bionic
@@ -29,6 +33,9 @@ spec:
         - containerPort: 27017
         - containerPort: 27018
         - containerPort: 27019
+        volumeMounts:
+        - mountPath: "/data/db" 
+          name: pv-storage-mongo
 ---
 apiVersion: v1
 kind: Service
